testcases/error/invalid_mixin_itself.veryl
interface invalid_mixin_itself {
    mixin invalid_mixin_itself;
}
